provisioning/resources/gateway-setup.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts: [ "*" ]
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-virtual-service
  namespace: istio-system
spec:
  gateways: [ app-gateway ]
  hosts: [ "*" ]
  http:
  - match:
    - uri: { prefix: / }
    route:
    - destination: { host: frontend }
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-destination-rule
  namespace: istio-system
spec:
  host: frontend
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: x-sticky-user
